src/objects/inscor__Purchase_Order__c.object
<CustomObject>
    <fields>
        <fullName>Legacy_Ship_Method__c</fullName>
        <label>Legacy Ship Method</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Acct__c</fullName>
        <inlineHelpText>If this field is left blank when changing Ship Method then the default Acct # will be filled in automatically.</inlineHelpText>
        <label>Acct #</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Approval_Queue_Name__c</fullName>
        <label>Approval Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_City__c</fullName>
        <label>Billing City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Country__c</fullName>
        <label>Billing Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Postal_Code__c</fullName>
        <label>Billing Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_State__c</fullName>
        <label>Billing State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Billing_Street__c</fullName>
        <label>Billing Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category_Auto_Update__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Business Category Auto Update?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Business_Category__c</fullName>
        <label>Business Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Business_Category</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Carrier__c</fullName>
        <label>Carrier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Ship_Carrier</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Company_Total_Value__c</fullName>
        <label>Company Total Value</label>
        <summarizedField>inscor__Purchase_Order_Line__c.inscor__Company_Line_Total__c</summarizedField>
        <summaryForeignKey>inscor__Purchase_Order_Line__c.inscor__PO_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__Company__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Company</label>
        <referenceTo>inscor__Company__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.inscor__Vendor__c</valueField>
            </filterItems>
            <filterItems>
                <field>$Source.inscor__Dropship_Site__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.inscor__Dropship_Site__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <filterItems>
                <field>$Source.inscor__Dropship_Site__c</field>
                <operation>equals</operation>
                <valueField>Contact.inscor__Account_Shipping_Address__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Conversion_ID__c</fullName>
        <label>Conversion ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Create_Date__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <label>Create Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>inscor__Created_From_Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created From Sales Order</label>
        <referenceTo>inscor__Sales_Order__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__DropShip_Email__c</fullName>
        <label>DropShip Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>inscor__Dropship_ATTN__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dropship ATTN</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Dropship_to_Account__c</field>
                <operation>equals</operation>
                <valueField>Contact.AccountId</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Purchase Orders (Dropship ATTN)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Dropship_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dropship Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Dropship_to_Account__c</field>
                <operation>equals</operation>
                <valueField>inscor__Account_Ship_Address__c.inscor__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Account_Ship_Address__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Dropship_to_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Dropship to Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders (Dropship to Account)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_Available__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>External Comments Available</label>
        <referenceTo>inscor__Quick_Comment__c</referenceTo>
        <relationshipLabel>Purchase Orders (External Comments Available)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__External_Comments_rt__c</fullName>
        <label>External Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__External_Reference_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Reference ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>inscor__FOB__c</fullName>
        <label>Port/Dest</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Generate_PDF_Selected_Docs__c</fullName>
        <label>Generate PDF Selected Docs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Generate_PO_Selected_Docs__c</fullName>
        <label>Generate PO Selected Docs</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_Available__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Comments Available</label>
        <referenceTo>inscor__Quick_Comment__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Internal_Comments_rt__c</fullName>
        <label>Internal Comments</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>inscor__Load_Address_from_Account__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Load Address from Account - RETIRED</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>inscor__Number_of_Lines__c</fullName>
        <label>Number of Lines</label>
        <summaryForeignKey>inscor__Purchase_Order_Line__c.inscor__PO_Number__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Total_Value__c</fullName>
        <label>PO Total Value</label>
        <summarizedField>inscor__Purchase_Order_Line__c.inscor__Line_Total__c</summarizedField>
        <summaryForeignKey>inscor__Purchase_Order_Line__c.inscor__PO_Number__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>inscor__PO_Type__c</fullName>
        <label>PO Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spec</fullName>
                    <default>true</default>
                    <label>Spec</label>
                </value>
                <value>
                    <fullName>Lot</fullName>
                </value>
                <value>
                    <fullName>Consignment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__RFQ_Number__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RFQ Number</label>
        <referenceTo>inscor__RFQ__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Reference_ID__c</fullName>
        <label>Reference ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Return_PO_City__c</fullName>
        <label>Return PO City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Return_PO_Country__c</fullName>
        <label>Return PO Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Return_PO_Postal_Code__c</fullName>
        <label>Return PO Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Return_PO_State__c</fullName>
        <label>Return PO State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Return_PO_Street__c</fullName>
        <label>Return PO Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Return_PO_Vendor_Site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Return PO Vendor Site</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Vendor__c</field>
                <operation>equals</operation>
                <valueField>inscor__Account_Ship_Address__c.inscor__Account__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Account_Ship_Address__c</referenceTo>
        <relationshipLabel>Purchase Orders (Return PO Vendor Site)</relationshipLabel>
        <relationshipName>Purchase_Orders2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Revision__c</fullName>
        <label>Revision#</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Method__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If wanting to use the default Acct # when setting/changing Ship Method, make sure that Acct # is blank. If Acct # is filled in then it will not be automatically set.</inlineHelpText>
        <label>Ship Method</label>
        <referenceTo>inscor__Ship_Method__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_Terms__c</fullName>
        <label>Ship Terms</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>inscor__Shipping_Terms</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Ship_To_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Ship To Address</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.inscor__Vendor__c</field>
                <operation>equals</operation>
                <valueField>inscor__Account_Ship_Address__c.inscor__Account__c</valueField>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>inscor__Account_Ship_Address__c</referenceTo>
        <relationshipLabel>Purchase Orders (Ship To Address)</relationshipLabel>
        <relationshipName>Purchase_Orders1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Ship_To_Location__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Ship To Location</label>
        <referenceTo>inscor__Company_Location__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_City__c</fullName>
        <label>Shipping City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Country__c</fullName>
        <label>Shipping Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Postal_Code__c</fullName>
        <label>Shipping Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_State__c</fullName>
        <label>Shipping State</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Shipping_Street__c</fullName>
        <label>Shipping Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>inscor__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Sent to Vendor</fullName>
                </value>
                <value>
                    <fullName>Partially Received</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Terms__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Terms</label>
        <referenceTo>inscor__Account_Terms__c</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>inscor__Urgency__c</fullName>
        <label>Urgency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Routine</fullName>
                    <default>true</default>
                    <label>Routine</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
                <value>
                    <fullName>High</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>inscor__Vendor__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Vendor</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.inscor__Hide_from_PO__c</field>
                <operation>equals</operation>
                <value>False</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Purchase Orders</relationshipLabel>
        <relationshipName>Purchase_Orders</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>Purchase Order</label>
    <listViews>
        <fullName>inscor__All</fullName>
        <columns>NAME</columns>
        <columns>inscor__Status__c</columns>
        <columns>inscor__Vendor__c</columns>
        <columns>inscor__Contact__c</columns>
        <columns>inscor__Create_Date__c</columns>
        <columns>inscor__PO_Type__c</columns>
        <columns>inscor__PO_Total_Value__c</columns>
        <columns>inscor__External_Reference_ID__c</columns>
        <columns>inscor__Assigned_To__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Purchase Orders</label>
    </listViews>
    <nameField>
        <displayFormat>PO-{0}</displayFormat>
        <label>PO Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Purchase Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>inscor__Business_Category_blank_Auto_Update</fullName>
        <active>true</active>
        <errorConditionFormula>inscor__Business_Category_Auto_Update__c == true &amp;&amp; NOT(ISBLANK(TEXT(inscor__Business_Category__c)))</errorConditionFormula>
        <errorMessage>Auto Update Cannot be true when Business Category Selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Cancelled_cannot_be_changed</fullName>
        <active>false</active>
        <errorConditionFormula>AND( 
ISCHANGED(inscor__Status__c), 
TEXT(PRIORVALUE(inscor__Status__c)) = &quot;Cancelled&quot; 
)</errorConditionFormula>
        <errorMessage>Once cancelled, the PO cannot be reopened</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Dropship_Site_And_Ship_To_Location</fullName>
        <active>false</active>
        <errorConditionFormula>NOT(ISBLANK(inscor__Dropship_to_Account__c)) &amp;&amp; NOT(ISBLANK(inscor__Ship_To_Location__c ))</errorConditionFormula>
        <errorMessage>Can not set &quot;Dropship to Account&quot; and &quot;Ship To Location&quot; together.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__PO_Type_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW()  = FALSE &amp;&amp;   ISPICKVAL(inscor__PO_Type__c, &quot;&quot;)</errorConditionFormula>
        <errorDisplayField>inscor__PO_Type__c</errorDisplayField>
        <errorMessage>PO Type is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>inscor__Status_cannot_be_previous</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;In_Progress&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Sent to Vendor&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Partially Received&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Received&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;New&quot;)
   )
,
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Sent to Vendor&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Partially Received&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Received&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;In Progress&quot;)
   )
,
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Partially Received&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Received&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;Sent to Vendor&quot;)
   )
,
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Received&quot;),
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;Partially Received&quot;)
   )
,
   AND
   (
     OR(
       ISPICKVAL(PRIORVALUE( inscor__Status__c ), &quot;Complete&quot;)
       ),
      ISPICKVAL(inscor__Status__c, &quot;Received&quot;)
   )
)</errorConditionFormula>
        <errorMessage>Status cannot be changed to a previous status</errorMessage>
    </validationRules>
</CustomObject>